--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@types/node": "^12.20.6",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
+    "firebase": "^8.3.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "shortid": "^2.2.16",
     "typescript": "^4.2.3",
     "web-vitals": "^1.1.1"
   },
@@ -39,5 +42,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.1.7",
+    "@types/shortid": "0.0.29"
   }
 }
